todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todo-app-fullstack-dep
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: todo-app-fullstack
  template:
    metadata:
      labels:
        app: todo-app-fullstack
    spec:
      volumes:
        - name: shared-images
          persistentVolumeClaim:
            claimName: image-claim
        - name: config-properties
          configMap:
            name: todo-app-fullstack-config
            items:
              - key: application.properties
                path: application.properties
      containers:
        - name: frontend
          image: TODO_FRONTEND_IMAGE
          ports: 
           - containerPort: 5173
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          volumeMounts:
          - name: shared-images
            mountPath: /usr/local/app/public/images
        - name: todo-app
          image: TODO_IMAGE
          ports: 
           - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          resources:
            requests:
              memory: "384Mi"
              cpu: "100m"
            limits:
              memory: "640Mi"
              cpu: "500m"
          volumeMounts:
          - name: shared-images
            mountPath: /sharedImages
          - name: config-properties
            mountPath: /config
            readOnly: true
