todo-app/manifests/nats.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-server-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
      - name: nats
        image: nats:latest
        ports:
        - containerPort: 4222
