todo-app/manifests/broadcast.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broadcaster-dep
  namespace: project
spec:
  replicas: 6
  selector:
    matchLabels:
      app: broadcaster
  template:
    metadata:
      labels:
        app: broadcaster
    spec:
      containers:
        - name: broadcaster
          image: junior246/broadcaster:latest
---

apiVersion: v1
kind: Service
metadata:
  name: my-nats
  namespace: project
spec:
  selector:
    app: nats
  ports:
    - protocol: TCP
      port: 4222
      targetPort: 4222
