todo-app/manifests/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: postgres-svc
spec:
  ports:
  - port: 5432
  selector:
    app: postgressapp

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: project
  name: postgres-stset
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgressapp
  template:
    metadata:
      labels:
        app: postgressapp
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 100Mi
